Bug 282584 - When connection name is too long, it pulls the strength/encryption indicator to the right
Summary: When connection name is too long, it pulls the strength/encryption indicator ...
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-22 22:25 UTC by Kai Uwe Broulik
Modified: 2011-09-26 10:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments
Name too long (73.58 KB, image/png)
2011-09-22 22:25 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-09-22 22:25:46 UTC
Created attachment 63869 [details]
Name too long

Version:           unspecified (using Devel) 
OS:                Linux

[nm09 branch]

My WiFi SSID is rather long and so its name pulls the strength indicator and the encryption indicator to the right.
See screenshot.
Sorry if it is poorly readable but Capture "Window Under Mouse Pointer" also captured the transparency :)

Reproducible: Always

Steps to Reproduce:
.


Expected Results:  
.
Comment 1 Lamarque V. Souza 2011-09-25 18:42:06 UTC
Git commit 2f1330cd95366dd020a9c372edb0da91a18dd397 by Lamarque V. Souza.
Committed on 25/09/2011 at 20:38.
Pushed by lvsouza into branch 'nm09'.

Limit connection's name to 20 characters when exibiting them in
connection list.

BUG: 282584
FIXED-IN: nm09

M  +1    -0    applet/activatableitem.cpp
M  +1    -0    applet/activatableitem.h
M  +3    -2    applet/gsminterfaceconnectionitem.cpp
M  +2    -1    applet/interfaceconnectionitem.cpp
M  +5    -4    applet/wirelessnetworkitem.cpp

http://commits.kde.org/networkmanagement/2f1330cd95366dd020a9c372edb0da91a18dd397
Comment 2 Kai Uwe Broulik 2011-09-26 10:39:11 UTC
Couldn't it be done using a "fade out" instead of ellipsis? :) Would look nicer I think.