Limit connection's name to 20 characters when exibiting them in connection list.

BUG: 282584
FIXED-IN: nm09